# AiPi-Voice-Assistant-V2

./: CMakeLists.txt  FreeRTOSConfig.h  bsp_es8388.c  build_log.txt  build_log_serial.txt  build_output.txt  config.h  deepseek_client.c  deepseek_client.h  flash_prog_cfg.ini  https_client.c  https_client.h  main.c  mbedtls_sample_config.h  proj.conf  stt_client.c  stt_client.h  tts_client.c  tts_client.h  vad.c  vad.h  whisper_live_client.c  whisper_live_client.h
demos/240X320_ui/custom/: custom.c  custom.h
